<resources>
    <string name="app_name">Domos</string>

    <string name="facebook_app_id">2065317220420467</string>
    <string name="fb_login_protocol_scheme">fb2065317220420467</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="content_description">Image</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_forget_password">¿Forgot password?</string>
    <string name="lbl_continue">Continue without authentication ></string>
    <string name="lbl_full_name">Name and last name</string>
    <string name="identification_type_hint">Document type</string>
    <string name="document_number_hint">Numero documento</string>
    <string name="cell_phone_hint">Cell phone</string>
    <string name="lbl_terms_conditions">I accept terms and conditions.</string>
    <!-- TODO: traducir -->
    <string name="txtdomicilios">Domicilios</string>
    <string name="txtcompras">Compras</string>
    <string name="txtfeedback">Notificaciones</string>
    <string name="txtprofile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- errors messages form-->
    <string name="err_select_identification_type">Seleccione un tipo de identificación.</string>
    <string name="err_type_identification_number">Type identification number</string>
    <string name="err_type_name">Type name</string>
    <string name="err_type_email">Type email</string>
    <string name="err_invalid_email_format">Invalid email format</string>
    <string name="err_type_password">Type password</string>
    <string name="err_type_cel_number">Type cell phone number</string>
    <string name="err_invalid_cell_phone_number">Invalid cell phone number</string>
    <string name="err_accept_terms_and_conditions">Accept terms and conditions.</string>


    <string name="txt_prueba">Luis Alberto Véliz se derrumbó sobre el asfalto del puente internacional Simón Bolívar. Por la estructura de hormigón, de 315 metros de largo, pasa una romería incesante de San Antonio (Venezuela) a Villa del Rosario (Colombia). Hay embarazadas, bebés, ancianos y también hombres como él, que se sentía joven, sano y fuerte. A las 3:12 de la tarde de este jueves 8 de febrero, sin embargo, se quebró en llanto.Véliz tiene 29 años. Está en buena condición física para el trabajo que le pongan, pero a esta hora se muestra inconsolable. Cinco días atrás estaba con su familia en Valencia, estado de Carabobo, al otro extremo del mapa. “Teníamos días sin comer. Les dije: ‘De hambre no nos vamos a morir’. Cogí un par de camisas, dos pantalones y arranqué”, cuenta. Viajó por tierra durante 72 horas. “Alguna gente me recogió, a otros les pagué, y caminé”, cuenta.En su ciudad natal era mecánico. “De los buenos”, afirma. Su fama era bien ganada, tanto por su habilidad para detectar a primera vista los fallos de los carros como por sus estudios intermedios. Pero eso no fue suficiente cuando vino la crisis.¿En qué momento se jodió Venezuela? Anthony Montañez, de 39 años, y su esposa, Yany Gallardo, de 24, tienen la fecha exacta: 5 de marzo del 2013. “El día que murió nuestro comandante Hugo Chávez”, dicen al unísono. Esta pareja vive de la caridad; en tres meses, ninguno ha encontrado trabajo. Ambos vivían en Barquisimeto, estado Lara, con sus dos hijos, de 8 y 11 años.“Con el Comandante había dificultades, pero jamás pasábamos hambre. Maduro es el único culpable”, coincide Deivi de Jesús Aguilera, de 22 años, oriundo de Puerto Cabello, donde está el puerto que registraba el paso del 80 por ciento de las mercancías que entraban y salían de la otrora envidiada Venezuela. “Él no está bien de la cabeza”, sentencia.</string>


    <!--etiquetas para el fragment de compras-->
    <string name="message_hint">Message</string>
    <string name="Make_purchase">Make a purchase</string>
    <string name="tittle_delete_itemShop_dialog">Delete</string>
    <string name="message_delete_itemShop_dialog">Are you sure you want to delete this item?</string>
    <string name="btn_positive_dialog_delete">Delete</string>
    <string name="btn_positive_dialog_ok">Ok</string>
    <string name="btn_negative_dialog">cancel</string>
    <string name="abbrev_seconds_lbl">Secs</string>
    <string name="tittle_request_permissions">Permissions</string>
    <string name="all_permissions_request">All permissions are required</string>
    <string name="go_settings">Go to settings and enable permissions</string>
    <string name="tittle_audio_dialog">Audio</string>
</resources>
